--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "postman-learning-center",
   "private": true,
   "description": "Postman Learning Center documentation project",
-  "version": "0.1.0",
+  "version": "4.1.0",
   "dependencies": {
-    "@github-docs/frontmatter": "^1.2.0",
-    "algoliasearch": "^4.3.1",
+    "@github-docs/frontmatter": "1.3.1",
+    "algoliasearch": "4.11.0",
     "autocomplete.js": "^0.37.0",
     "axios": "^0.21.1",
     "babel-eslint": "^10.0.3",
@@ -28,7 +28,7 @@
     "gatsby-plugin-purgecss": "^6.1.0",
     "gatsby-plugin-react-helmet": "^5.3.0",
     "gatsby-plugin-robots-txt": "^1.6.14",
-    "gatsby-plugin-sass": "^5.3.0",
+    "gatsby-plugin-sass": "5.3.0",
     "gatsby-plugin-sharp": "4.3.0",
     "gatsby-plugin-sitemap": "^5.3.0",
     "gatsby-plugin-sri": "^1.1.0",
@@ -44,10 +44,9 @@
     "googleapis": "^55.0.0",
     "identity-obj-proxy": "^3.0.0",
     "jquery": "3.5.1",
-    "jquery.scrollto": "^2.1.3",
+    "jquery.scrollto": "2.1.3",
     "markdownlint-cli": "^0.19.0",
     "node-fetch": "2.6.1",
-    "node-sass": "^4.13.1",
     "popper.js": "^1.16.1",
     "prettier": "^1.18.2",
     "prismjs": "^1.24.1",
@@ -57,11 +56,12 @@
     "react-cookie-consent": "^4.1.0",
     "react-dom": "^16.9.0",
     "react-helmet": "^5.2.1",
-    "react-instantsearch-dom": "^5.7.0",
+    "react-instantsearch-dom": "5.7.0",
     "react-onclickout": "^2.0.8",
     "react-tabs": "^3.0.0",
     "react-test-renderer": "^16.9.0",
     "react-typography": "^0.16.19",
+    "sass": "1.44.0",
     "s3-deploy": "^1.4.0",
     "sendmail": "^1.6.1",
     "shelljs": "^0.8.4",
